Fixed small alignment problems in product detail page

--- a/PROJECT2/css/homepage.css
+++ b/PROJECT2/css/homepage.css
@@ -174,10 +174,10 @@ main {
 }
 
 @media screen and (min-width: 600px) and (max-width:900px) {
-  .banner-video {
+  /* .banner-video { */
     /* margin-top: -160px;
     margin-right: -30px; */
-  }
+  /* } */
 
   .header-text {
     font-size: 6rem;
